Bug 1598063 - Don't hide text styled with a pending user font when drawing canvas text, just draw with fallback instead. r=heycam

Differential Revision: https://phabricator.services.mozilla.com/D55707

--HG--
extra : moz-landing-system : lando