layout/generic/nsTextFrameUtils.h
@@ -35,7 +35,11 @@ class nsTextFrameUtils {
     HasTab = 0x01,
     // the original text has at least one soft hyphen character
     HasShy = 0x02,
-    UnusedFlags = 0x0C,
+    UnusedFlags = 0x04,
+
+    // Flag used in textrun construction to *prevent* hiding of fallback text
+    // for pending user-fonts (used for Canvas2d text).
+    DontSkipDrawingForPendingUserFonts = 0x08,
 
     // The following flags are set by nsTextFrame
 
